--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ Select * from table_name where variable_A
             
 	<div class="modal-body">
 		<textarea id="Textarea3" name="Textarea3" type="text" rows="6" cols="75">
-not complemted: need to build basic udate
+not completed: need to build basic update
   		</textarea>
 		</div>
             <div class="modal-footer">
@@ -483,7 +483,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15<br />
+  		Version:1.15 (96ef)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
