--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ not completed: need to build basic update
 		</div>
             <div class="modal-footer">
   		<button id="clipboardCopy"> Copy </button>
-		</div>
+		
 		
 		
 		<script>	
@@ -420,6 +420,7 @@ not completed: need to build basic update
 		}
 		</script>
     </div>
+</div> <!--- 15.1 + moved from under button--->	
 
 	    
 
