--- a/index.html
+++ b/index.html
@@ -360,7 +360,8 @@ Select * from table_name
 	
 	<div class="modal-footer">
                 <!---<h3 style="font-size:14pt;">Button 1 Footer</h3>--->
-		    <button id="copy">Copy</button>
+		    <!--- 15+ changed to below <button id="copy">Copy</button>--->
+		    <button id="clipboardCopy"> Copy </button>
             </div>
         </div>
 
@@ -383,7 +384,8 @@ Select * from table_name where variable_A
 		</div>
             <div class="modal-footer">
                 <!---<h3 style="font-size:14pt;">Button 2 Footer</h3>--->
-		    <button id="copy">Copy</button>
+		    <!--- 15+ changed to below <button id="copy">Copy</button>--->
+		    <button id="clipboardCopy"> Copy </button>
             </div>
         </div>
 
@@ -484,7 +486,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15 (96ef)<br />
+  		Version:1.16 (96ef)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
