--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ not completed: need to build basic update
 		
 		<script>	
 		// Type 2
-		document.getElementById('clipboardCopy3').addEventListener('click', clipboardCopy);
+		document.getElementById('clipboardCopy3').addEventListener('click', clipboardCopy3);
 		async function clipboardCopy3() {
   		let text = document.querySelector("#Textarea3").value;
   		await navigator.clipboard.writeText(text);
@@ -484,7 +484,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.17 (96ef)<br />
+  		Version:1.18 (96ef)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
