--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ Select * from table_name
 		
 		<script>	
 		// Type 2
-		document.getElementById('clipboardCopy2').addEventListener('click', clipboardCopy1);
+		document.getElementById('clipboardCopy1').addEventListener('click', clipboardCopy1);
 		async function clipboardCopy1() {
   		let text = document.querySelector("#Textarea1").value;
   		await navigator.clipboard.writeText(text);
@@ -512,7 +512,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.19 c (restore 1.18)<br />
+  		Version:1.19 d (restore 1.18)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
