--- a/index.html
+++ b/index.html
@@ -507,12 +507,36 @@ for (i = 0; i < coll.length; i++) {
 </script>
 </DIV>
 
+<div id="1" class="message fade">
+
+  This is a message
+
+  <a href="#">Undo</a>
+
+</div>
+
+ 
+
+<button type="button" data-toggle="message" data-target="#1">
+
+  Open message
+
+</button>
+
+ 
+
+<button type="button" data-toggle="message" data-target="#1" data-expire="2000">
+
+  Open disappearing message
+
+</button>
+
   
   
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.19 d (restore 1.18)<br />
+  		Version:2.0 (restore 1.19 d)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
