--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
 	<meta name="description" 	content="Chris Brown | Quality Assurance"> <!---Web Searches--->
 	<Title>Chris Brown | SQL</Title>
 	 <link rel="stylesheet" href="modal.css">
-	var tag = document.getElementById('demo');
-var button = document.querySelector('button');
-button.addEventListener('click', function(){
-tag.classList.toggle('demo');
-});
+
 	
 <style>
 .collapsible {
@@ -496,8 +492,7 @@ not completed: need to build basic update
     </script>
 </div>
 
-<p id='demo' class='demo'>Hello Javascript</p>
-<button type='button'> click me </button>
+
 	
 	
 <script><!--- collapse script--->
@@ -518,8 +513,16 @@ for (i = 0; i < coll.length; i++) {
 </script>
 </DIV>
 
+<p id='demo' class='demo'>Hello Javascript</p>
+<button type='button'> click me </button>
 
-
+<script>
+var tag = document.getElementById('demo');
+var button = document.querySelector('button');
+button.addEventListener('click', function(){
+tag.classList.toggle('demo');
+});
+</script>
 
 
   
@@ -527,7 +530,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:2.1 (restore 1.19 d)<br />
+  		Version:2.2 (restore 1.19 d)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
