--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" 		content="width=device-width, initial-scale=1.0">
 	<meta name="description" 	content="Chris Brown | Quality Assurance"> <!---Web Searches--->
-	<link rel="stylesheet" 		type="text/css" 	href="https:/MainPage/testStyle.CSS">
+	<link rel="stylesheet" 		type="text/css" 	href="https:/MainPage/TestStyle.css">
 	
 	<Title>Chris Brown | Software Methodologies</Title>
 	
