--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 .sidenav {
   margin: 0;
   padding: 0;
-  width: 200px;
+  /*width: 200px; removed*/
+	width: 12%; /*repsonsive:*15*/
   background-color: #f1f1f1;
-  position: fixed;
+  /*position: fixed; removed*/
+  position: absolute; /*added*/
   height: 100%;
   overflow: auto;
 }
