--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
   <div class="sidenav">
 		<br />
-		<U>Links</U><br />
-		<br />
+		<!---<U>Links</U><br />
+		<br />  removed this---> 
     		<a href="https://chrisdbrown409.github.io/MainPage/">Home</a><br />
     		<a href="https://github.com/chrisdbrown409">Github Root</a><br />
     		<a href="https://github.com/chrisdbrown409/HTML1/edit/main/index.html" >Github Repository</a><br />
