--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 		<br />
 		<!---<U>Links</U><br />
 		<br />  removed this---> 
-    		<a href="https://chrisdbrown409.github.io/MainPage/">Home</a><br />
-    		<a href="https://github.com/chrisdbrown409">Github Root</a><br />
-    		<a href="https://github.com/chrisdbrown409/HTML1/edit/main/index.html" >Github Repository</a><br />
-    		<a href="mailto:chrisdbrown409@gmail.com?subject=Website Email!&body=Chris,">Email Author</a><br />
-    		<a href="https://www.linkedin.com/in/chrisbrown72/">Author's Profile</a><br />
+    		<a href="https://chrisdbrown409.github.io/MainPage/">Home</a>
+    		<a href="https://github.com/chrisdbrown409">Github Root</a>
+    		<a href="https://github.com/chrisdbrown409/HTML1/edit/main/index.html" >Github Repository</a>
+    		<a href="mailto:chrisdbrown409@gmail.com?subject=Website Email!&body=Chris,">Email Author</a>
+    		<a href="https://www.linkedin.com/in/chrisbrown72/">Author's Profile</a>
 	</div>
 
 
