--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <HR>
 
   <div class="sidenav">
-		<br />
-		<!---<U>Links</U><br />
+		<!---<br />
+		<U>Links</U><br />
 		<br />  removed this---> 
     		<a href="https://chrisdbrown409.github.io/MainPage/">Home</a>
     		<a href="https://github.com/chrisdbrown409">Github Root</a>
