--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
 	</div>
 
 
+<div class="sidenavmobile">
+		<!---<br />
+		<U>Links</U><br />
+		<br />  removed this---> 
+    		<a href="https://chrisdbrown409.github.io/MainPage/">Home</a>
+    		<!---<a href="https://github.com/chrisdbrown409">Github Root</a>---> 
+    		<!---<a href="https://github.com/chrisdbrown409/HTML1/edit/main/index.html" >Github Repository</a>---> 
+    		<a href="mailto:chrisdbrown409@gmail.com?subject=Website Email!&body=Chris,">Email Author</a>
+    		<a href="https://www.linkedin.com/in/chrisbrown72/">Author's Profile</a>
+		<input type="button" onclick="window.location.href='https://chrisdbrown409.github.io/MainPage/';" value="Home" />
+	</div>	
+	
+	
+
 <div class="main">
 	<div>
 		<h2>Software Methodologies</h2>
