--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 <div class="hero-image">
   <div class="hero-text">
-    Software Methodologies- HTML TEST SITE
+    Software Methodologies- HTML TEST SITE 1
    </div>
 </div>
 <HR>
