--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	</div>
 
 
-<div class="sidenavm">
+<div class="sidenavmobile">
 		<!---<br />
 		<U>Links</U><br />
 		<br />  removed this---> 
