--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<U>Links</U><br />
 		<br />  removed this---> 
     		<input type="button" onclick="window.location.href='https://chrisdbrown409.github.io/MainPage/';" value="Home" />
-		<a href="https://chrisdbrown409.github.io/MainPage/">Home</a>
+		<!---<a href="https://chrisdbrown409.github.io/MainPage/">Home</a>---> 
     		<!---<a href="https://github.com/chrisdbrown409">Github Root</a>---> 
     		<!---<a href="https://github.com/chrisdbrown409/HTML1/edit/main/index.html" >Github Repository</a>---> 
     		<a href="mailto:chrisdbrown409@gmail.com?subject=Website Email!&body=Chris,">Email Author</a>
