--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 		<U>Links</U><br />
 		<br />  removed this---> 
     		<input type="button" onclick="window.location.href='https://chrisdbrown409.github.io/MainPage/';" value="Home" />&#160;|&#160;
-		<input type="button" onclick="window.location.href='https://github.com/chrisdbrown409/HTML1/edit/main/index.html';" value="GIT Project" />&#160;|&#160;
 		<input type="button" onclick="window.location.href='https://www.linkedin.com/in/chrisbrown72/';" value="Author Profile" />&#160;|&#160;
-		<button onclick= "document.location =  'mailto:chrisdbrown409@gmail.com'"">Email</button>										
+		<button onclick= "document.location =  'mailto:chrisdbrown409@gmail.com'"">Email</button>&#160;|&#160;
+		<input type="button" onclick="window.location.href='https://github.com/chrisdbrown409/HTML1/edit/main/index.html';" value="GIT Project" />
 		<!---<a href="https://github.com/chrisdbrown409">Github Root</a>---> 
     		<!---<a href="https://github.com/chrisdbrown409/HTML1/edit/main/index.html" >Github Repository</a>---> 
     		<!---<a href="mailto:chrisdbrown409@gmail.com?subject=Website Email!&body=Chris,">Email Author</a>--->
